Semantic markup improvements

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,7 @@
-<nav>
-    <a [routerLink]="[homeLink]">
-        <h1>Rick and Morty Table Crawler</h1>
+<header>
+  <h1>
+    <a [routerLink]="[homeLink]" aria-label="Home">
+      Rick and Morty Table Crawler
     </a>
-</nav>
+  </h1>
+</header>
