--- a/src/app/routes/main-page/components/data-table/table-row/table-row.component.html
+++ b/src/app/routes/main-page/components/data-table/table-row/table-row.component.html
@@ -1,10 +1,26 @@
 <ng-container>
   @if (rowData) {
-    <td><img [ngSrc]="rowData.image" width="32" height="32"/></td>
-    <td><span role="link" (click)="onNameClick()">{{rowData.name}}</span></td>
+    <td>
+      <img 
+        [ngSrc]="rowData.image" 
+        [alt]="rowData.name + ' avatar'" 
+        width="32" 
+        height="32" 
+      />
+    </td>
+    <td>
+      <a 
+        role="link" 
+        (click)="onNameClick()" 
+        tabindex="0"
+        ariaLabel="View details for {{rowData.name}}"
+      >
+        {{rowData.name}}
+      </a>
+    </td>
     <td>{{rowData.species}}</td>
     <td>{{rowData.status}}</td>
   } @else {
-    <td>Mysterious row! You're not supposed to see this.</td>
+    <td colspan="4">Mysterious row! You're not supposed to see this.</td>
   }
 </ng-container>
