--- a/src/app/features/search-bar/search-bar.component.scss
+++ b/src/app/features/search-bar/search-bar.component.scss
@@ -23,6 +23,8 @@
 
   .search-input {
     flex-grow: 1;
+    width: 100%;
+    box-sizing: border-box;
     min-width: 12rem;
     padding: 0.5rem 1rem;
     font-size: 1rem;
@@ -44,7 +46,7 @@
 }
 
 // Responsive Design
-@media (min-width: 768px) {
+@media (min-width: 526px) {
   .search-bar {
     padding: 1rem 4rem;
 
